--- a/dev-python/gnome-python-desktop/ChangeLog
+++ b/dev-python/gnome-python-desktop/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/gnome-python-desktop
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/gnome-python-desktop/ChangeLog,v 1.53 2008/05/05 20:52:08 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gnome-python-desktop/ChangeLog,v 1.54 2008/05/29 16:12:27 hawking Exp $
+
+  29 May 2008; Ali Polatel <hawking@gentoo.org>
+  gnome-python-desktop-2.20.0.ebuild, gnome-python-desktop-2.22.0.ebuild:
+  python_mod_optimize is ROOT aware.
 
   05 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
   -gnome-python-desktop-2.18.0.ebuild:
