--- a/games-board/pysol/ChangeLog
+++ b/games-board/pysol/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-board/pysol
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/pysol/ChangeLog,v 1.18 2008/03/28 12:16:50 nyhm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-board/pysol/ChangeLog,v 1.19 2008/05/29 16:53:25 hawking Exp $
+
+  29 May 2008; Ali Polatel <hawking@gentoo.org> pysol-4.82-r2.ebuild:
+  python_mod_optimize is ROOT aware.
 
   28 Mar 2008; Tristan Heaven <nyhm@gentoo.org> pysol-4.82-r2.ebuild:
   Fix python eclass usage
