--- a/sys-fs/btrfs/ChangeLog
+++ b/sys-fs/btrfs/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/btrfs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs/ChangeLog,v 1.2 2008/05/27 18:57:43 lavajoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs/ChangeLog,v 1.3 2008/05/29 16:59:52 lavajoe Exp $
+
+*btrfs-0.15 (29 May 2008)
+
+  29 May 2008; Joe Peterson <lavajoe@gentoo.org> +btrfs-0.15.ebuild:
+  Version bump to 0.15
 
   27 May 2008; Joe Peterson <lavajoe@gentoo.org> btrfs-0.14.ebuild:
   Changed to depend on any revision of btrfs-progs
