--- a/gnome-extra/music-applet/ChangeLog
+++ b/gnome-extra/music-applet/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/music-applet
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/music-applet/ChangeLog,v 1.13 2008/04/17 20:37:15 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/music-applet/ChangeLog,v 1.14 2008/05/29 17:11:44 hawking Exp $
+
+  29 May 2008; Ali Polatel <hawking@gentoo.org> music-applet-2.3.0.ebuild,
+  music-applet-2.3.0-r1.ebuild, music-applet-2.3.1.ebuild:
+  python_mod_optimize is ROOT aware. Fixed python_mod_cleanup.
 
 *music-applet-2.3.1 (17 Apr 2008)
 
