--- a/net-nds/luma/ChangeLog
+++ b/net-nds/luma/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-nds/luma
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/luma/ChangeLog,v 1.31 2008/05/13 18:30:08 hawking Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/luma/ChangeLog,v 1.32 2008/05/29 17:46:17 hawking Exp $
+
+  29 May 2008; Ali Polatel <hawking@gentoo.org> luma-2.3.ebuild:
+  python_mod_{cleanup,optimize} are ROOT aware.
 
 *luma-2.4 (13 May 2008)
 
