--- a/net-zope/zope/ChangeLog
+++ b/net-zope/zope/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-zope/zope
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.136 2008/05/29 10:53:25 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.137 2008/05/29 18:19:04 armin76 Exp $
+
+  29 May 2008; Raúl Porcel <armin76@gentoo.org> zope-2.9.8.ebuild:
+  alpha/sparc stable wrt #224015
 
   29 May 2008; Christian Faulhammer <opfer@gentoo.org> zope-2.9.8.ebuild:
   stable x86, bug 224015
