--- a/x11-misc/glipper/ChangeLog
+++ b/x11-misc/glipper/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/glipper
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/glipper/ChangeLog,v 1.11 2008/03/23 13:28:45 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/glipper/ChangeLog,v 1.12 2008/05/29 18:19:27 hawking Exp $
+
+  29 May 2008; Ali Polatel <hawking@gentoo.org> glipper-1.0.ebuild,
+  glipper-1.0-r1.ebuild, glipper-1.0-r2.ebuild:
+  python_mod_optimize is ROOT aware. Multilib love.
 
 *glipper-1.0-r2 (23 Mar 2008)
 
