--- a/app-mobilephone/kmobiletools/ChangeLog
+++ b/app-mobilephone/kmobiletools/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-mobilephone/kmobiletools
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/kmobiletools/ChangeLog,v 1.23 2008/03/01 16:30:02 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/kmobiletools/ChangeLog,v 1.24 2008/05/29 21:29:54 mrness Exp $
+
+  29 May 2008; Alin Năstac <mrness@gentoo.org> kmobiletools-0.4.3.3.ebuild,
+  kmobiletools-0.5.0_beta3.ebuild:
+  Update SRC_URI (#218657).
 
   01 Mar 2008; Carsten Lohrke <carlo@gentoo.org>
   kmobiletools-0.4.3.3.ebuild:
