--- a/x11-libs/qt-qt3support/ChangeLog
+++ b/x11-libs/qt-qt3support/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/qt-qt3support
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-qt3support/ChangeLog,v 1.8 2008/05/27 13:19:54 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-qt3support/ChangeLog,v 1.9 2008/05/30 03:41:06 jer Exp $
+
+  30 May 2008; Jeroen Roovers <jer@gentoo.org> qt-qt3support-4.4.0.ebuild:
+  Marked ~hppa (bug #223557).
 
   27 May 2008; Raúl Porcel <armin76@gentoo.org> qt-qt3support-4.4.0.ebuild:
   Add ~alpha/~ia64/~sparc wrt #223557
