--- a/app-antivirus/bitdefender-console/ChangeLog
+++ b/app-antivirus/bitdefender-console/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-antivirus/bitdefender-console
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-antivirus/bitdefender-console/ChangeLog,v 1.20 2007/04/29 17:25:54 phreak Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-antivirus/bitdefender-console/ChangeLog,v 1.21 2008/05/30 06:27:30 phreak Exp $
+
+  30 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Andrej Kacian (Ticho) from metadata.xml (as per #59986).
 
   29 Apr 2007; Christian Heim <phreak@gentoo.org>
   bitdefender-console-7.0.1-r1.ebuild, bitdefender-console-7.1.ebuild:
