--- a/app-antivirus/f-prot/ChangeLog
+++ b/app-antivirus/f-prot/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-antivirus/f-prot
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-antivirus/f-prot/ChangeLog,v 1.51 2007/01/29 20:33:31 ticho Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-antivirus/f-prot/ChangeLog,v 1.52 2008/05/30 06:28:15 phreak Exp $
+
+  30 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Andrej Kacian (Ticho) from metadata.xml (as per #59986).
 
   29 Jan 2007; Andrej Kacian <ticho@gentoo.org>
   -files/check-updates.pl.diff, -f-prot-4.6.0-r2.ebuild,
