--- a/mail-client/claws-mail-cachesaver/ChangeLog
+++ b/mail-client/claws-mail-cachesaver/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-client/claws-mail-cachesaver
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-cachesaver/ChangeLog,v 1.14 2008/05/28 01:51:10 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-cachesaver/ChangeLog,v 1.15 2008/05/30 06:41:11 phreak Exp $
+
+  30 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Andrej Kacian (Ticho) from metadata.xml (as per #59986).
 
   28 May 2008; Mark Loeser <halcy0n@gentoo.org>
   claws-mail-cachesaver-0.10.3.ebuild, claws-mail-cachesaver-0.10.4.ebuild,
