--- a/mail-client/claws-mail-smime/ChangeLog
+++ b/mail-client/claws-mail-smime/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-client/claws-mail-smime
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-smime/ChangeLog,v 1.19 2008/05/29 02:14:22 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-smime/ChangeLog,v 1.20 2008/05/30 06:49:23 phreak Exp $
+
+  30 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Andrej Kacian (Ticho) from metadata.xml (as per #59986).
 
   29 May 2008; Mark Loeser <halcy0n@gentoo.org>
   claws-mail-smime-0.7.2.ebuild, claws-mail-smime-0.7.3.ebuild,
