--- a/media-sound/kmp/ChangeLog
+++ b/media-sound/kmp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/kmp
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/kmp/ChangeLog,v 1.12 2008/02/29 19:57:16 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/kmp/ChangeLog,v 1.13 2008/05/30 07:03:59 phreak Exp $
+
+  30 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Andrej Kacian (Ticho) from metadata.xml (as per #59986).
 
   29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> kmp-0.01.ebuild,
   kmp-0.5.ebuild:
