--- a/net-im/silky/ChangeLog
+++ b/net-im/silky/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/silky
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/silky/ChangeLog,v 1.21 2007/08/21 22:40:19 ticho Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/silky/ChangeLog,v 1.22 2008/05/30 07:11:48 phreak Exp $
+
+  30 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Andrej Kacian (Ticho) from metadata.xml (as per #59986).
 
   21 Aug 2007; Andrej Kacian <ticho@gentoo.org> -silky-0.5.1.ebuild,
   -silky-0.5.2.ebuild, -silky-0.5.4.ebuild, silky-0.5.5.ebuild:
