--- a/net-wireless/opd/ChangeLog
+++ b/net-wireless/opd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/opd
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/opd/ChangeLog,v 1.7 2007/07/24 15:26:55 beandog Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/opd/ChangeLog,v 1.8 2008/05/30 07:22:18 phreak Exp $
+
+  30 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Andrej Kacian (Ticho) from metadata.xml (as per #59986).
 
   24 Jul 2007; Steve Dibb <beandog@gentoo.org> opd-0.2-r1.ebuild:
   Add ~amd64, bug 181080
