--- a/x11-misc/glsof/ChangeLog
+++ b/x11-misc/glsof/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/glsof
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/glsof/ChangeLog,v 1.12 2007/06/03 20:21:21 drac Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/glsof/ChangeLog,v 1.13 2008/05/30 07:25:03 phreak Exp $
+
+  30 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Andrej Kacian (Ticho) from metadata.xml (as per #59986). Assigning
+  to maintainer-needed.
 
   03 Jun 2007; Samuli Suominen <drac@gentoo.org> ChangeLog:
   Fix digestentry.unused to make repoman silent.
