--- a/net-im/sim/ChangeLog
+++ b/net-im/sim/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-im/sim
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/sim/ChangeLog,v 1.88 2008/05/11 13:24:42 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/sim/ChangeLog,v 1.89 2008/05/30 07:33:53 pva Exp $
+
+*sim-0.9.4.3-r2 (30 May 2008)
+
+  30 May 2008; Peter Volkov <pva@gentoo.org>
+  +files/sim-0.9.4.3-sslv23.patch, sim-0.9.4.3-r1.ebuild,
+  +sim-0.9.4.3-r2.ebuild:
+  Fix for ssl connection problems with newer openssl versions, bug #224095
+  thank Anton Bolshakov for report!
 
   11 May 2008; Peter Volkov <pva@gentoo.org> sim-9999.ebuild:
   Fixed dependencies, e.g. flex should not be in RDEPEND, bug #221339 thank
