--- a/kde-base/phonon/ChangeLog
+++ b/kde-base/phonon/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/phonon
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/phonon/ChangeLog,v 1.7 2008/05/16 00:54:39 ingmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/phonon/ChangeLog,v 1.8 2008/05/30 08:36:43 zlin Exp $
+
+  30 May 2008; Bo Ørsted Andresen <zlin@gentoo.org> phonon-4.0.4.ebuild:
+  KDE4_BUILT_WITH_USE_CHECK is now always an array. Bug #216863.
 
 *phonon-4.0.4 (15 May 2008)
 
