--- a/kde-base/dragonplayer/ChangeLog
+++ b/kde-base/dragonplayer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/dragonplayer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/dragonplayer/ChangeLog,v 1.2 2008/03/11 07:55:12 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/dragonplayer/ChangeLog,v 1.3 2008/05/30 08:39:34 zlin Exp $
+
+  30 May 2008; Bo Ørsted Andresen <zlin@gentoo.org>
+  dragonplayer-2.0.1.ebuild:
+  KDE4_BUILT_WITH_USE_CHECK is now always an array. Bug #216863.
 
 *dragonplayer-2.0.1 (10 Mar 2008)
   
