--- a/kde-base/kdnssd/ChangeLog
+++ b/kde-base/kdnssd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdnssd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdnssd/ChangeLog,v 1.91 2008/05/18 16:26:22 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdnssd/ChangeLog,v 1.92 2008/05/30 08:58:03 zlin Exp $
+
+  30 May 2008; Bo Ørsted Andresen <zlin@gentoo.org> kdnssd-4.0.4.ebuild:
+  KDE4_BUILT_WITH_USE_CHECK is now always an array. Bug #216863.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kdnssd-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
