--- a/media-plugins/gimp-greycstoration/ChangeLog
+++ b/media-plugins/gimp-greycstoration/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gimp-greycstoration
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gimp-greycstoration/ChangeLog,v 1.2 2008/03/30 17:45:48 calchan Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gimp-greycstoration/ChangeLog,v 1.3 2008/05/30 11:08:12 calchan Exp $
+
+  30 May 2008; Denis Dupeyron <calchan@gentoo.org>
+  gimp-greycstoration-2.8.ebuild:
+  Added unzip to DEPEND, thanks to Marek Miller (bug #114577).
 
 *gimp-greycstoration-2.8 (30 Mar 2008)
 
