removed blocker and >=subversion-1.3, replacing with =subversion-1.4*; actually makes more sense as 1.3 is no longer in the tree (Portage version: 2.1.5.2)

--- a/dev-util/kdesvn/ChangeLog
+++ b/dev-util/kdesvn/ChangeLog
@@ -1,10 +1,11 @@
 # ChangeLog for dev-util/kdesvn
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/kdesvn/ChangeLog,v 1.45 2008/05/30 13:41:06 george Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/kdesvn/ChangeLog,v 1.46 2008/05/30 14:40:51 george Exp $
 
   30 May 2008; George Shapovalov <george@gentoo.org> kdesvn-0.14.1.ebuild,
   kdesvn-0.14.2.ebuild:
-  changed < to != dependency for subversion-1.5
+  fixed RDEPEND to point to =subversion-1.4*, as 1.3 is no longer in the tree
+  and to avoid ranged deps.
 
 *kdesvn-0.14.4 (29 May 2008)
 
