--- a/app-misc/beagle/ChangeLog
+++ b/app-misc/beagle/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/beagle
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/beagle/ChangeLog,v 1.76 2008/05/13 07:48:55 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/beagle/ChangeLog,v 1.77 2008/05/30 20:01:33 cedk Exp $
+
+*beagle-0.3.7 (28 May 2008)
+
+  28 May 2008; Cédric Krier <cedk@gentoo.org> +beagle-0.3.7.ebuild:
+  Version bump
 
   13 May 2008; Peter Volkov <pva@gentoo.org> beagle-0.2.18.ebuild,
   beagle-0.3.6.ebuild:
