--- a/dev-dotnet/mono-fuse/ChangeLog
+++ b/dev-dotnet/mono-fuse/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-dotnet/mono-fuse
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/mono-fuse/ChangeLog,v 1.9 2007/08/01 03:09:54 metalgod Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/mono-fuse/ChangeLog,v 1.10 2008/05/30 22:38:46 jurek Exp $
+
+*mono-fuse-0.4.2 (30 May 2008)
+
+  30 May 2008; Jurek Bartuszek <jurek@gentoo.org> +mono-fuse-0.4.2.ebuild:
+  Version bump (bug #213672)
 
   01 Aug 2007; <metalgod@gentoo.org> mono-fuse-0.4.1.ebuild:
   Added ~amd64 keyword. Closes bug #186135
