--- a/dev-dotnet/gtkgl-sharp/ChangeLog
+++ b/dev-dotnet/gtkgl-sharp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-dotnet/gtkgl-sharp
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/gtkgl-sharp/ChangeLog,v 1.11 2008/03/12 13:49:58 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/gtkgl-sharp/ChangeLog,v 1.12 2008/05/30 22:54:35 jurek Exp $
+
+  30 May 2008; Jurek Bartuszek <jurek@gentoo.org> gtkgl-sharp-0.05.ebuild:
+  Added dev-util/pkgconfig dependency (bug #206096)
 
   12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing Peter Johanson (latexer, #206688) from metadata.xml.
