--- a/dev-dotnet/jscall-sharp/ChangeLog
+++ b/dev-dotnet/jscall-sharp/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-dotnet/jscall-sharp
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/jscall-sharp/ChangeLog,v 1.8 2008/03/17 15:31:06 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/jscall-sharp/ChangeLog,v 1.9 2008/05/30 23:15:00 jurek Exp $
+
+  30 May 2008; Jurek Bartuszek <jurek@gentoo.org>
+  jscall-sharp-0.0.2_pre20061125.ebuild,
+  jscall-sharp-0.0.3_pre20070621.ebuild:
+  Added dev-util/pkgconfig dependency (bug #206103)
 
   17 Mar 2008; Raúl Porcel <armin76@gentoo.org>
   jscall-sharp-0.0.2_pre20061125.ebuild,
