--- a/net-analyzer/nagios-nrpe/ChangeLog
+++ b/net-analyzer/nagios-nrpe/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/nagios-nrpe
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nrpe/ChangeLog,v 1.50 2008/04/27 18:14:56 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nrpe/ChangeLog,v 1.51 2008/05/31 08:17:35 dertobi123 Exp $
+
+  31 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  nagios-nrpe-2.12.ebuild, nagios-nrpe-2.12-r101.ebuild:
+  Add ~hppa, #224019
 
 *nagios-nrpe-2.12-r101 (27 Apr 2008)
 
