--- a/net-nds/luma/ChangeLog
+++ b/net-nds/luma/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-nds/luma
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/luma/ChangeLog,v 1.32 2008/05/29 17:46:17 hawking Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/luma/ChangeLog,v 1.33 2008/05/31 11:31:36 hawking Exp $
+
+  31 May 2008; Ali Polatel <hawking@gentoo.org> luma-2.4.ebuild:
+  Fix sed to catch all occurences of doCompile to fix collisions. Thanks to
+  Martin von Gagern, #223531.
 
   29 May 2008; Ali Polatel <hawking@gentoo.org> luma-2.3.ebuild:
   python_mod_{cleanup,optimize} are ROOT aware.
