--- a/xfce-extra/xfce4-sensors/ChangeLog
+++ b/xfce-extra/xfce4-sensors/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for xfce-extra/xfce4-sensors
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-sensors/ChangeLog,v 1.29 2008/03/22 11:22:41 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-sensors/ChangeLog,v 1.30 2008/05/31 11:48:21 drac Exp $
+
+*xfce4-sensors-0.10.99.3-r1 (31 May 2008)
+
+  31 May 2008; Samuli Suominen <drac@gentoo.org>
+  +files/xfce4-sensors-0.10.99.3-acpi.patch,
+  +files/xfce4-sensors-0.10.99.3-hddtemp.patch,
+  +xfce4-sensors-0.10.99.3-r1.ebuild:
+  Apply patches ffrom bugs 217743 and 214527, thanks to Torsten Krah, Paolo
+  Pedroni, Tim Taubert and Andy Crook. Fixes for ACPI and hddtemp.
 
   22 Mar 2008; nixnut <nixnut@gentoo.org> xfce4-sensors-0.10.99.3.ebuild:
   Stable on ppc wrt bug 214130
