--- a/gnome-extra/gnome2-user-docs/ChangeLog
+++ b/gnome-extra/gnome2-user-docs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/gnome2-user-docs
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome2-user-docs/ChangeLog,v 1.97 2008/04/13 14:57:27 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome2-user-docs/ChangeLog,v 1.98 2008/05/31 12:31:28 eva Exp $
+
+*gnome2-user-docs-2.22.1 (31 May 2008)
+
+  31 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  -gnome2-user-docs-2.18.2.ebuild, +gnome2-user-docs-2.22.1.ebuild:
+  New version for GNOME-2.22.2. Updates to guides and translation updates.
 
   13 Apr 2008; Mart Raudsepp <leio@gentoo.org>
   gnome2-user-docs-2.18.2.ebuild, gnome2-user-docs-2.20.1.ebuild,
