--- a/x11-misc/xsimpsons/ChangeLog
+++ b/x11-misc/xsimpsons/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xsimpsons
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xsimpsons/ChangeLog,v 1.14 2008/02/05 17:11:43 coldwind Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xsimpsons/ChangeLog,v 1.15 2008/05/31 23:06:49 coldwind Exp $
+
+  31 May 2008; Santiago M. Mola <coldwind@gentoo.org> xsimpsons-0.1.ebuild:
+  amd64 stable and install docs
 
   05 Feb 2008; Santiago M. Mola <coldwind@gentoo.org> xsimpsons-0.1.ebuild:
   Keyworded ~amd64.
