--- a/app-laptop/acerhk/ChangeLog
+++ b/app-laptop/acerhk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-laptop/acerhk
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/acerhk/ChangeLog,v 1.27 2008/01/30 23:08:09 jurek Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/acerhk/ChangeLog,v 1.28 2008/06/01 01:25:57 jurek Exp $
+
+  01 Jun 2008; Jurek Bartuszek <jurek@gentoo.org> acerhk-0.5.35.ebuild:
+  Changed /etc/modules.d to /etc/modprobe.d (bug #214030)
 
   30 Jan 2008; Jurek Bartuszek <jurek@gentoo.org> acerhk-0.5.35.ebuild:
   Make acerhk build against 2.6.24 kernel (bug #207601)
