--- a/app-text/utrac/ChangeLog
+++ b/app-text/utrac/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/utrac
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/utrac/ChangeLog,v 1.1 2006/06/04 21:05:57 wschlich Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/utrac/ChangeLog,v 1.2 2008/06/01 08:38:50 wschlich Exp $
+
+  01 Jun 2008; Wolfram Schlich <wschlich@gentoo.org> utrac-0.3.0.ebuild:
+  add missing IUSE as per bug #224375
 
 *utrac-0.3.0 (04 Jun 2006)
 
