--- a/sys-apps/hal/ChangeLog
+++ b/sys-apps/hal/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/hal
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/ChangeLog,v 1.238 2008/05/29 02:26:11 compnerd Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/ChangeLog,v 1.239 2008/06/01 10:57:15 nixnut Exp $
+
+  01 Jun 2008; nixnut <nixnut@gentoo.org> hal-0.5.10.ebuild:
+  Added ~ppc wrt bug 200050
 
 *hal-0.5.11-r1 (29 May 2008)
 
