dev-lang/boo: version bump (Portage version: 2.1.4.4)

--- a/dev-lang/boo/ChangeLog
+++ b/dev-lang/boo/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/boo
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/boo/ChangeLog,v 1.21 2008/03/12 14:10:09 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/boo/ChangeLog,v 1.22 2008/06/01 11:33:01 jurek Exp $
+
+*boo-0.8.2.2960 (01 Jun 2008)
+
+  01 Jun 2008; Jurek Bartuszek <jurek@gentoo.org> +boo-0.8.2.2960.ebuild:
+  Version bump
 
   12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing Peter Johanson (latexer, #206688) from metadata.xml.
