--- a/dev-util/monodevelop-boo/ChangeLog
+++ b/dev-util/monodevelop-boo/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/monodevelop-boo
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/monodevelop-boo/ChangeLog,v 1.1 2007/12/31 04:46:36 jurek Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/monodevelop-boo/ChangeLog,v 1.2 2008/06/01 14:54:12 jurek Exp $
+
+*monodevelop-boo-1.0 (01 Jun 2008)
+
+  01 Jun 2008; Jurek Bartuszek <jurek@gentoo.org>
+  +monodevelop-boo-1.0.ebuild:
+  Version bump (bug #195925)
 
 *monodevelop-boo-0.18.1 (31 Dec 2007)
 
