--- a/dev-util/monodevelop-java/ChangeLog
+++ b/dev-util/monodevelop-java/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/monodevelop-java
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/monodevelop-java/ChangeLog,v 1.1 2007/12/31 05:01:13 jurek Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/monodevelop-java/ChangeLog,v 1.2 2008/06/01 14:57:53 jurek Exp $
+
+*monodevelop-java-1.0 (01 Jun 2008)
+
+  01 Jun 2008; Jurek Bartuszek <jurek@gentoo.org>
+  +monodevelop-java-1.0.ebuild:
+  Version bump (bug #195925)
 
 *monodevelop-java-0.18 (31 Dec 2007)
 
