--- a/net-analyzer/nagios-nrpe/ChangeLog
+++ b/net-analyzer/nagios-nrpe/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/nagios-nrpe
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nrpe/ChangeLog,v 1.51 2008/05/31 08:17:35 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nrpe/ChangeLog,v 1.52 2008/06/01 17:35:55 opfer Exp $
+
+  01 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
+  nagios-nrpe-2.12.ebuild:
+  stable x86, bug 224019
 
   31 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
   nagios-nrpe-2.12.ebuild, nagios-nrpe-2.12-r101.ebuild:
