--- a/app-office/openoffice/ChangeLog
+++ b/app-office/openoffice/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-office/openoffice
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.399 2008/05/29 12:24:40 suka Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.400 2008/06/01 19:14:34 suka Exp $
+
+*openoffice-2.4.1_rc2 (01 Jun 2008)
+
+  01 Jun 2008; Andreas Proschofsky <suka@gentoo.org>
+  -files/2.4.1_rc1/gentoo-2.4.1_rc1.diff, +files/gentoo-2.4.1_rc2.diff,
+  -files/2.4.1_rc1/ooo-env_log.diff, +files/ooo-env_log.diff,
+  -openoffice-2.4.1_rc1.ebuild, +openoffice-2.4.1_rc2.ebuild:
+  Bump to second release candidate for OOo 2.4.1
 
   29 May 2008; Andreas Proschofsky <suka@gentoo.org>
   openoffice-2.4.0.ebuild, openoffice-2.4.1_rc1.ebuild:
