--- a/sci-visualization/hippodraw/ChangeLog
+++ b/sci-visualization/hippodraw/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for sci-visualization/hippodraw
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/hippodraw/ChangeLog,v 1.1 2007/02/23 15:12:58 bicatali Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/hippodraw/ChangeLog,v 1.2 2008/06/01 20:14:33 markusle Exp $
+
+*hippodraw-1.21.3 (01 Jun 2008)
+
+  01 Jun 2008; Markus Dittrich <markusle@gentoo.org>
+  +files/hippodraw-1.21.3-gcc4.3.patch,
+  +files/hippodraw-1.21.3-numarray.patch, hippodraw-1.19.1.ebuild,
+  +hippodraw-1.21.3.ebuild:
+  Version bump, masked for a bit more testing. Added patch for gcc4.3
+  compatibility (also need >=boost-1.35 for gcc4.3). Changed license
+  to GPL-2 since this is what the LICENSE file in the tarball states.
 
 *hippodraw-1.19.1 (23 Feb 2007)
 
