--- a/media-sound/beast/ChangeLog
+++ b/media-sound/beast/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/beast
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/beast/ChangeLog,v 1.30 2007/06/19 18:14:17 aballier Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/beast/ChangeLog,v 1.31 2008/06/01 21:21:47 eva Exp $
+
+*beast-0.7.1-r1 (01 Jun 2008)
+
+  01 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  +files/beast-0.7.1-configure.patch, +files/beast-0.7.1-glib.patch,
+  files/beast-0.7.1-noinstalltest.patch, +beast-0.7.1-r1.ebuild:
+  Fix compilation with newer glib, bug #223291.
 
   19 Jun 2007; Alexis Ballier <aballier@gentoo.org> -beast-0.6.4.ebuild,
   -beast-0.6.5.ebuild, -beast-0.6.6.ebuild:
