--- a/www-apps/horde-groupware/ChangeLog
+++ b/www-apps/horde-groupware/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-apps/horde-groupware
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-groupware/ChangeLog,v 1.2 2008/03/09 10:30:08 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-groupware/ChangeLog,v 1.3 2008/06/01 21:40:32 vapier Exp $
+
+*horde-groupware-1.1 (01 Jun 2008)
+
+  01 Jun 2008; Mike Frysinger <vapier@gentoo.org>
+  +horde-groupware-1.1.ebuild:
+  Version bump #224333 by Arfrever Frehtes Taifersar Arahesis.
 
 *horde-groupware-1.0.5 (09 Mar 2008)
 
