--- a/www-apps/horde-webmail/ChangeLog
+++ b/www-apps/horde-webmail/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/horde-webmail
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-webmail/ChangeLog,v 1.7 2008/03/09 10:32:24 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-webmail/ChangeLog,v 1.8 2008/06/01 21:43:27 vapier Exp $
+
+*horde-webmail-1.1 (01 Jun 2008)
+
+  01 Jun 2008; Mike Frysinger <vapier@gentoo.org> +horde-webmail-1.1.ebuild:
+  Version bump #221505 by Arfrever Frehtes Taifersar Arahesis.
 
 *horde-webmail-1.0.6 (09 Mar 2008)
 
