--- a/app-i18n/man-pages-cs/ChangeLog
+++ b/app-i18n/man-pages-cs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-i18n/man-pages-cs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/man-pages-cs/ChangeLog,v 1.5 2008/02/06 00:49:36 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/man-pages-cs/ChangeLog,v 1.6 2008/06/02 04:04:24 darkside Exp $
+
+*man-pages-cs-0.17.20080113 (02 Jun 2008)
+
+  02 Jun 2008; Jeremy Olexa <darkside@gentoo.org>
+  +man-pages-cs-0.17.20080113.ebuild:
+  Version bump, bug #223039. Dropped existing stable kw's to ~ARCH
 
   06 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
   -man-pages-cs-0.16.ebuild, man-pages-cs-0.16-r1.ebuild:
