--- a/net-wireless/bluez-libs/ChangeLog
+++ b/net-wireless/bluez-libs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/bluez-libs
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-libs/ChangeLog,v 1.104 2008/05/13 13:01:32 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-libs/ChangeLog,v 1.105 2008/06/02 05:57:52 jer Exp $
+
+  02 Jun 2008; Jeroen Roovers <jer@gentoo.org> bluez-libs-3.30.ebuild:
+  Stable for HPPA (bug #224409).
 
   13 May 2008; Petteri Räty <betelgeuse@gentoo.org> metadata.xml:
   Remove proxy maintainer as he doesn't use Gentoo any more.
