--- a/net-wireless/bluez-utils/ChangeLog
+++ b/net-wireless/bluez-utils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/bluez-utils
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-utils/ChangeLog,v 1.123 2008/05/13 13:01:30 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-utils/ChangeLog,v 1.124 2008/06/02 05:58:28 jer Exp $
+
+  02 Jun 2008; Jeroen Roovers <jer@gentoo.org> bluez-utils-3.30.ebuild:
+  Stable for HPPA (bug #224409).
 
   13 May 2008; Petteri Räty <betelgeuse@gentoo.org> metadata.xml:
   Remove proxy maintainer as he doesn't use Gentoo any more.
