--- a/net-wireless/bluez-bluefw/ChangeLog
+++ b/net-wireless/bluez-bluefw/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/bluez-bluefw
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-bluefw/ChangeLog,v 1.18 2008/05/13 13:03:37 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-bluefw/ChangeLog,v 1.19 2008/06/02 06:18:14 jer Exp $
+
+  02 Jun 2008; Jeroen Roovers <jer@gentoo.org> bluez-bluefw-1.0.ebuild:
+  Stable for HPPA (bug #224409).
 
   13 May 2008; Petteri Räty <betelgeuse@gentoo.org> metadata.xml:
   Remove proxy maintainer as he doesn't use Gentoo any more.
