--- a/sci-visualization/hippodraw/ChangeLog
+++ b/sci-visualization/hippodraw/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-visualization/hippodraw
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/hippodraw/ChangeLog,v 1.2 2008/06/01 20:14:33 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/hippodraw/ChangeLog,v 1.3 2008/06/02 10:30:39 markusle Exp $
+
+  02 Jun 2008; Markus Dittrich <markusle@gentoo.org>
+  hippodraw-1.19.1.ebuild, hippodraw-1.21.3.ebuild:
+  Added check for python's USE="threads" (see bug #224269).
 
 *hippodraw-1.21.3 (01 Jun 2008)
 
