--- a/net-zope/plonepopoll/ChangeLog
+++ b/net-zope/plonepopoll/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-zope/plonepopoll
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/plonepopoll/ChangeLog,v 1.5 2007/02/05 20:24:56 flameeyes Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-zope/plonepopoll/ChangeLog,v 1.6 2008/06/02 10:41:03 tupone Exp $
+
+*plonepopoll-2.6.1 (02 Jun 2008)
+
+  02 Jun 2008; Tupone Alfredo <tupone@gentoo.org> +plonepopoll-2.6.1.ebuild:
+  Version bump to 2.6.1. Tested on plone-2.5
 
   05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
