--- a/media-plugins/audacious-xosd/ChangeLog
+++ b/media-plugins/audacious-xosd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/audacious-xosd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-xosd/ChangeLog,v 1.12 2008/05/06 12:07:29 joker Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-xosd/ChangeLog,v 1.13 2008/06/02 11:17:57 joker Exp $
+
+  02 Jun 2008; Christian Birchinger <joker@gentoo.org>
+  audacious-xosd-0.9.ebuild:
+  Added IUSE
 
   06 May 2008; Christian Birchinger <joker@gentoo.org>
   audacious-xosd-0.9.ebuild:
