--- a/dev-cpp/cppserv/ChangeLog
+++ b/dev-cpp/cppserv/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-cpp/cppserv
 # Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/cppserv/ChangeLog,v 1.16 2008/03/24 05:47:28 iluxa Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/cppserv/ChangeLog,v 1.17 2008/06/02 15:17:55 iluxa Exp $
+
+  02 Jun 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
+  cppserv-0.1.107.ebuild:
+  Tell users where to find me in case of error
 
   24 Mar 2008; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
   +cppserv-0.1.107.ebuild:
