--- a/media-plugins/mythmusic/ChangeLog
+++ b/media-plugins/mythmusic/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/mythmusic
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythmusic/ChangeLog,v 1.74 2008/04/23 18:15:04 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythmusic/ChangeLog,v 1.75 2008/06/02 16:03:57 cardoe Exp $
+
+  02 Jun 2008; Doug Goldstein <cardoe@gentoo.org>
+  mythmusic-0.20.2_p14282.ebuild:
+  supports fftw 3.0 as well. bug #191238
 
 *mythmusic-0.21_p17015 (23 Apr 2008)
 
