--- a/net-misc/cisco-vpnclient-3des/ChangeLog
+++ b/net-misc/cisco-vpnclient-3des/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/cisco-vpnclient-3des
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/cisco-vpnclient-3des/ChangeLog,v 1.57 2008/02/05 02:37:10 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/cisco-vpnclient-3des/ChangeLog,v 1.58 2008/06/02 20:55:58 wolf31o2 Exp $
+
+  02 Jun 2008; Chris Gianelloni <wolf31o2@gentoo.org>
+  +files/4.8.01.0640-2.6.24.patch, +files/4.8.01.0640-amd64.patch:
+  Version bump to 4.8.01.0640 for bug #202415. This ebuild has been
+  re-worked to not use the Cisco driver_build.sh shell script and instead
+  uses the Makefile provided to build the module.
 
   05 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> files/2.6.24.patch:
   Fixing with the proper patch for 4.8.00 and closing bug #207536.
