--- a/net-misc/cisco-vpnclient-3des/ChangeLog
+++ b/net-misc/cisco-vpnclient-3des/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-misc/cisco-vpnclient-3des
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/cisco-vpnclient-3des/ChangeLog,v 1.59 2008/06/02 21:54:03 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/cisco-vpnclient-3des/ChangeLog,v 1.60 2008/06/02 22:16:00 wolf31o2 Exp $
+
+  02 Jun 2008; Chris Gianelloni <wolf31o2@gentoo.org>
+  -cisco-vpnclient-3des-4.6.02.0030.ebuild,
+  -cisco-vpnclient-3des-4.7.00.0640.ebuild,
+  cisco-vpnclient-3des-4.7.00.0640-r1.ebuild,
+  -cisco-vpnclient-3des-4.8.00.0490.ebuild:
+  Removing older ebuilds and marking 4.7.00.0640-r1 stable for the 4.7
+  series, since there've been no bug reports and it works fine for me.
 
   02 Jun 2008; Chris Gianelloni <wolf31o2@gentoo.org>
   cisco-vpnclient-3des-4.8.01.0640.ebuild:
