--- a/net-misc/cisco-vpnclient-3des/ChangeLog
+++ b/net-misc/cisco-vpnclient-3des/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/cisco-vpnclient-3des
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/cisco-vpnclient-3des/ChangeLog,v 1.60 2008/06/02 22:16:00 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/cisco-vpnclient-3des/ChangeLog,v 1.61 2008/06/02 22:19:05 wolf31o2 Exp $
+
+  02 Jun 2008; Chris Gianelloni <wolf31o2@gentoo.org>
+  cisco-vpnclient-3des-4.8.01.0640.ebuild:
+  Fix a bug in the move code in pkg_postinst.
 
   02 Jun 2008; Chris Gianelloni <wolf31o2@gentoo.org>
   -cisco-vpnclient-3des-4.6.02.0030.ebuild,
