--- a/media-gfx/maya/ChangeLog
+++ b/media-gfx/maya/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/maya
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/maya/ChangeLog,v 1.26 2007/12/18 17:28:44 eradicator Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/maya/ChangeLog,v 1.27 2008/06/03 02:13:46 mr_bones_ Exp $
+
+  03 Jun 2008; Michael Sterrett <mr_bones_@gentoo.org> maya-6.5.ebuild:
+  remove reference to app-shells/csh which has been removed
 
   18 Dec 2007; Jeremy Huddleston <eradicator@gentoo.org> maya-6.5.ebuild:
   Fixed homepage url.  Closes bug #190309.
