Let's be multilib-strict. We likez ze discipline. And drop the stupid man-pages. Nobody liked them anyway. (Portage version: 2.1.5.3)

--- a/games-strategy/boson/ChangeLog
+++ b/games-strategy/boson/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-strategy/boson
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/boson/ChangeLog,v 1.32 2008/06/02 22:09:29 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/boson/ChangeLog,v 1.33 2008/06/03 22:12:19 loki_val Exp $
+
+  03 Jun 2008; Peter Alfredsen <loki_val@gentoo.org> boson-0.13-r1.ebuild:
+  Let's be multilib-strict. We likez ze discipline. And drop the stupid
+  man-pages. Nobody liked them anyway.
 
 *boson-0.13-r1 (02 Jun 2008)
 
