--- a/profiles/default-linux/x86/ChangeLog
+++ b/profiles/default-linux/x86/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/x86 profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/x86/ChangeLog,v 1.131 2008/06/05 08:42:08 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/default-linux/x86/ChangeLog,v 1.132 2008/06/06 08:16:10 remi Exp $
+
+  06 Jun 2008; Rémi Cardona <remi@gentoo.org> package.mask:
+  pkgmove to gnome-base/gnome-control-center
 
   05 Jun 2008; Christian Faulhammer <opfer@gentoo.org> no-nptl/package.mask:
   remove SELinux maskings as requested on bug 224641
